Correct alignment

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: "Museo Sans 300",sans-serif;
+    font-family: "Corbel Light",sans-serif;
     font-weight: 400;
     background: #EEEEEE;
 }
@@ -54,12 +54,12 @@ h2 {
     font-size: 28px;
 }
 h3 {
-    font-size: 20px;
+    font-size: 24px;
     color: #2d21a3;
 }
 h4 {
-    font-size: 20px;
-    color: #545454;
+    font-size: 24px;
+    color: #a8a8a8;
     font-style: italic;
 }
 
@@ -132,7 +132,7 @@ nav li a {
      width: 190px;
      margin: 0 25px;
      text-align: center;
-     font-family: "Frank Ruhl Libre", serif;
+     font-family: "Perpetua", serif;
      font-weight: 400;
      letter-spacing: -.5px;
      margin-bottom: 10px;
